# cadenza-client-rust

./: .coderabbit.yaml  .gitignore  .openapi-generator-ignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  release-please-config.json
.github/workflows/: release-please.yml  rust.yml
.openapi-generator/: FILES
docs/: AccountOperation.md  AccountType.md  AuthGetUser200Response.md  AuthLoginRequest.md  AuthLogout200Response.md  AuthRecoverRequest.md  AuthRefreshTokenRequest.md  AuthSession.md  AuthSignup200Response.md  AuthSignup429Response.md  AuthSignupRequest.md  AuthUpdateUserRequest.md  AuthUser.md  AuthUserAppMetadata.md  AuthUserIdentitiesInner.md  AuthenticationApi.md  BalanceEntry.md  BalanceStatus.md  BaseResponse.md  BaseResponseDetails.md  CancelTradeOrder200Response.md  CancelTradeOrderRequest.md  CollateralMode.md  ConnectTradingAccount200Response.md  ConnectTradingAccountRequest.md  ContingencyType.md  CreateTradingAccountCredential200Response.md  CreateTradingAccountCredentialRequest.md  CredentialStatus.md  CredentialType.md  DealerStatus.md  DeleteMarketInstrument200Response.md  DeleteMarketInstrumentRequest.md  DeleteMarketSecurity200Response.md  DeleteMarketSecurityRequest.md  DisableMarketInstrumentRequest.md  DisableTradingAccountRequest.md  DisconnectTradingAccountRequest.md  EnableMarketInstrument200Response.md  EnableMarketInstrumentRequest.md  (+298 more)
src/: lib.rs
src/apis/: authentication_api.rs  configuration.rs  fermata_api.rs  market_api.rs  market_subscription_api.rs  mod.rs  trade_order_api.rs  trading_account_api.rs  (+6 more)
(+329 files in other folders)
